overflow fix

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -22,7 +22,7 @@ html, body, div#viewport, main {
 
 @media (min-width: $mobile) {
 	html, body {
-		overflow: hidden;
+		// overflow: hidden;
 		position: relative;
 		width: 100%;
 		height: 100%;
@@ -33,7 +33,7 @@ html, body, div#viewport, main {
 
 @media (min-width: $mobile) {
 	html, body {
-		overflow: hidden;
+		// overflow: hidden;
 		position: relative;
 		top: 0;
 	}
